Resolved broken link on home page short bio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ layout: default
   <article class="bio">
     <h1>Hi, I'm Mikey Wills</h1>
     <h2 class="emote">A designer based out of Orange County, California.</h2>
-    <p>I am a parter at Kontorsion where I <a href="http://kontorsioninc.com" title="Kontorsion">design clothes</a>. When I'm not working with textiles, I'm most likely geeking out somewhere on the web. I (attempt to) <a href="#" title="blog">write</a> on my blog, <a href="https://twitter.com/mukealicious" title="My Twitter">tweet</a> on that Twitter thing, <a href="https://github.com/Mukealicious" title="My GitHub">commit code</a> to GitHub, and <a href="http://www.rdio.com/people/Mukealicious/" title="My Rdio">vibe out</a> on Rdio.</p>
+    <p>I am a parter at Kontorsion where I <a href="http://kontorsioninc.com" title="Kontorsion">design clothes</a>. When I'm not working with textiles, I'm most likely geeking out somewhere on the web. I (attempt to) <a href="/writing.html" title="Writing">write</a> on my blog, <a href="https://twitter.com/mukealicious" title="My Twitter">tweet</a> on that Twitter thing, <a href="https://github.com/Mukealicious" title="My GitHub">commit code</a> to GitHub, and <a href="http://www.rdio.com/people/Mukealicious/" title="My Rdio">vibe out</a> on Rdio.</p>
   </article>
 </section>
