Info First Commit

--- a/info.html
+++ b/info.html
@@ -4,7 +4,18 @@ title: Info
 ---
 <!-- Full Bio -->
 <section class="info">
-  <article class="coming-soon">
-    <h1>Coming Soon</h1>
+  <article class="full-bio">
+    <div class="face">
+      <img src="images/mikeyface.png" alt="Mikey's Face">
+    </div>
+    <div class="bio">
+      <h2>Mikey Who?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
   </article>
 </section>
