--- a/info.html
+++ b/info.html
@@ -5,17 +5,31 @@ title: Info
 <!-- Full Bio -->
 <section class="info">
   <article class="full-bio">
-    <div class="face">
-      <img src="images/mikeyface.png" alt="Mikey's Face">
-    </div>
     <div class="bio">
-      <h2>Mikey Who?</h2>
+      <img src="images/mikeyface.png" alt="Mikey's Face" class="face">
+      <h1>Mikey Who?</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </article>
+<!-- Recent Projects -->
+  <article class="recent-projects">
+    <h2 class="emote">Recent Projects</h2>
+    <div class="project">
+      <h4>Project 1</h4>
+      <img src="http://placehold.it/350x150" alt="Project 1">
+    </div>
+    <div class="project">
+      <h4>Project 2</h4>
+      <img src="http://placehold.it/350x150" alt="Project 2">
+    </div>
+    <div class="project">
+      <h4>Project 3</h4>
+      <img src="http://placehold.it/350x150" alt="Project 3">
     </div>
   </article>
 </section>
