Add images and links to Recent Work section on Info page

--- a/info.html
+++ b/info.html
@@ -20,16 +20,22 @@ title: Info
   <article class="recent-projects">
     <h2 class="emote">Recent Projects</h2>
     <div class="project">
-      <h4>Project 1</h4>
-      <img src="http://placehold.it/350x150" alt="Project 1">
+      <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
+      <h4>Fixed Income Academy</h4>
+      <img src="images/fia.png" alt="Fixed Income Academy">
+      </a>
     </div>
     <div class="project">
-      <h4>Project 2</h4>
-      <img src="http://placehold.it/350x150" alt="Project 2">
+      <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
+      <h4>Fixed Income Academy</h4>
+      <img src="images/fia.png" alt="Fixed Income Academy">
+      </a>
     </div>
     <div class="project">
-      <h4>Project 3</h4>
-      <img src="http://placehold.it/350x150" alt="Project 3">
+      <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
+      <h4>Fixed Income Academy</h4>
+      <img src="images/fia.png" alt="Fixed Income Academy">
+      </a>
     </div>
   </article>
 </section>
