Include titles and breakpoints on recent projects

--- a/info.html
+++ b/info.html
@@ -25,18 +25,21 @@ title: Info
     <div class="project">
       <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
       <h4>Fixed Income Academy</h4>
+      <span class='sub'>Director, Design &amp; Development</span>
       <img src="images/fia.png" alt="Fixed Income Academy">
       </a>
     </div>
     <div class="project">
       <a href="http://www.kontorsioninc.com" title="Kontorsion">
       <h4>Kontorsion</h4>
+      <span class='sub'>Partner, Apparel Designer</span>
       <img src="images/kon.png" alt="Kontorsion">
       </a>
     </div>
     <div class="project">
       <a href="http://www.villainsandvagabonds.com" title="Villains &amp; Vagabonds">
       <h4>Villains &amp; Vagabonds</h4>
+      <span class='sub'>Partner, Web &amp; Apparel Designer</span>
       <img src="images/vv.png" alt="Villains &amp; Vagabonds">
       </a>
     </div>
