Add TheraScript to recent work

--- a/info.html
+++ b/info.html
@@ -38,6 +38,13 @@ title: Info
   <article class="recent-projects">
     <h2 class="emote">Recent Projects</h2>
     <div class="project">
+      <a href="http://therascript.com" title="TheraScript">
+      <h4>TheraScript</h4>
+      <span class='sub'>Designer Co-Founder</span>
+      <img src="images/ts-work.png" alt="TheraScript">
+      </a>
+    </div>
+    <div class="project">
       <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
       <h4>Fixed Income Academy</h4>
       <span class='sub'>Director, Design &amp; Development</span>
