copy change in bio

--- a/info.html
+++ b/info.html
@@ -25,7 +25,7 @@ title: Info
       </p>
 
       <p>
-        My recent focus on the web has brought back that intoxicating feeling of endless possibilites. The same feeling as when I was first learning design and how to use all of the exciting new tools technology provides us. The idea that a whole industry can be disrupted with the right team and an understanding of the web.
+        My recent focus on the web has brought back that intoxicating feeling of endless possibilites. The same feeling as when I was first learning design and how to use all of the exciting new tools technology provides us. Taking hold of the idea that a whole industry can be disrupted with the right team and a core focus on the web.
       </p>
 
       <p>
