basic blog styling for most recent post on writing page

--- a/reading.html
+++ b/reading.html
@@ -5,6 +5,6 @@ title: Reading
 <!-- Reading List -->
 <section class="reading">
   <article class="coming-soon">
-    <h1>Coming Soon</h1>
+    <h1 class="alpha">Coming Soon</h1>
   </article>
 </section>
