--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,6 @@ title: Resources
 <!-- Resources List -->
 <section class="resources">
   <article class="coming-soon">
-    <h1>Coming Soon</h1>
+    <h1 class="alpha">Coming Soon</h1>
   </article>
 </section>
