change "recent" to "previous posts"

--- a/writing.html
+++ b/writing.html
@@ -21,7 +21,7 @@ title: Writing
   </article>
   {% endfor %}
   <div class="widget more-posts">
-    <h3 class="emote">Recent Posts</h3>
+    <h3 class="emote">Previous Posts</h3>
     <ul class="recent-posts">
     {% for post in site.posts %}
       <a href="{{ post.url }}" title="{{ post.title }}">
