New blog post "Small Ideas". Commented out tumblr links for now.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <article class="hi">
     <h1 id="hi">Hi, I'm Mikey Wills</h1>
     <h2 class="emote" id="iam">A designer based out of Orange County, California.</h2>
-    <p>Currently spend most of my time <a href="http://stylehatch.co/">designing the web</a> at Style Hatch. My history is in <a href="http://kontorsioninc.com/">apparel design</a> as a partner at Kontorsion. You can find me geeking out all over the web. I <a href="http://muke.me/writing.html">write</a> on my blog, <a href="https://twitter.com/mukealicious">tweet</a> on that Twitter thing, <a href="http://dribbble.com/Mukealicious">pat my back</a> on Dribbble, <a href="https://github.com/Mukealicious">commit code</a> to GitHub, <a href="">waste your time</a> on Tumblr, and <a href="http://www.rdio.com/people/Mukealicious/">vibe out</a> on Rdio.</p>
+    <p>Currently spend most of my time <a href="http://stylehatch.co/">designing the web</a> at Style Hatch. My history is in <a href="http://kontorsioninc.com/">apparel design</a> as a partner at Kontorsion. You can find me geeking out all over the web. I <a href="http://muke.me/writing.html">write</a> on my blog, <a href="https://twitter.com/mukealicious">tweet</a> on that Twitter thing, <a href="http://dribbble.com/Mukealicious">pat my back</a> on Dribbble, <a href="https://github.com/Mukealicious">commit code</a> to GitHub,<!--  <a href="http://muse.muke.me">waste your time</a> on Tumblr, --> and <a href="http://www.rdio.com/people/Mukealicious/">vibe out</a> on Rdio.</p>
   </article>
 </section>
 <!-- Fit Text -->
