Changed recent project title fonts/weights around. Also section headers to recent projects and previous posts.

--- a/info.html
+++ b/info.html
@@ -36,7 +36,7 @@ title: Info
   </article>
 <!-- Recent Projects -->
   <article class="recent-projects">
-    <h2 class="emote">Recent Projects</h2>
+    <h2>Recent Projects</h2>
     <div class="project">
       <a href="http://therascript.com" title="TheraScript">
       <h4>TheraScript</h4>
