Update recent projects

--- a/info.html
+++ b/info.html
@@ -45,10 +45,10 @@ title: Info
       </a>
     </div>
     <div class="project">
-      <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
-      <h4>Fixed Income Academy</h4>
-      <span class='sub'>Director, Design &amp; Development</span>
-      <img src="images/fia.png" alt="Fixed Income Academy">
+      <a href="http://otis.stylehatch.co/" title="Otis">
+      <h4>Otis</h4>
+      <span class='sub'>Design, Front-End Development</span>
+      <img src="images/otis.jpg" alt="Otis">
       </a>
     </div>
     <div class="project">
