Update another current project

--- a/info.html
+++ b/info.html
@@ -59,10 +59,10 @@ title: Info
       </a>
     </div>
     <div class="project">
-      <a href="http://www.villainsandvagabonds.com" title="Villains &amp; Vagabonds">
-      <h4>Villains &amp; Vagabonds</h4>
-      <span class='sub'>Partner, Web &amp; Apparel Designer</span>
-      <img src="images/vv.png" alt="Villains &amp; Vagabonds">
+      <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
+      <h4>Fixed Income Academy</h4>
+      <span class='sub'>Director, Design &amp; Development</span>
+      <img src="images/fia.png" alt="Fixed Income Academy">
       </a>
     </div>
   </article>
