Copy tweak on home bio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <h1 id="hi">Hi, I'm Mikey Wills</h1>
     <h2 class="emote" id="iam">A designer based out of Orange County, California.</h2>
     <p></p>
-    <p>Currently spend my days as a <a href="http://stylehatch.co/">front end developer</a> at Style Hatch. My background is in <a href="http://kontorsioninc.com/">apparel design</a> as a partner at Kontorsion. You can find me exposing myself all over the web&#8482;. Take a plunge into my <a href="http://muke.me/writing.html">vapid soul</a> on my blog. Gander at my <a href="https://twitter.com/mukealicious">short junk</a> on Twitter. I <a href="https://github.com/Mukealicious">try</a> on GitHub. Realize I have <a href="http://muse.muke.me">shit for brains</a> on Tumblr. Discover really <a href="http://dribbble.com/Mukealicious">nothing at all</a> on Dribbble. All while <a href="http://www.rdio.com/people/Mukealicious/">vibing out</a> with your boy on Rdio.</p>
+    <p>I Currently spend my days as a <a href="http://stylehatch.co/">front end developer</a> at Style Hatch. My background is in <a href="http://kontorsioninc.com/">apparel design</a> as a partner at Kontorsion. You can find me exposing myself all over the web&#8482;. Take a plunge into my <a href="http://muke.me/writing.html">vapid soul</a> on my blog. Gander at my <a href="https://twitter.com/mukealicious">short junk</a> on Twitter. I <a href="https://github.com/Mukealicious">try</a> on GitHub. Realize I have <a href="http://muse.muke.me">shit for brains</a> on Tumblr. Discover really <a href="http://dribbble.com/Mukealicious">nothing at all</a> on Dribbble. All while <a href="http://www.rdio.com/people/Mukealicious/">vibing out</a> with your boy on Rdio.</p>
   </article>
 </section>
 <!-- Fit Text -->
