Update recent work

--- a/info.html
+++ b/info.html
@@ -38,10 +38,17 @@ title: Info
   <article class="recent-projects">
     <h2>Recent Projects</h2>
     <div class="project">
-      <a href="http://therascript.com" title="TheraScript">
-      <h4>TheraScript</h4>
-      <span class='sub'>Designer Co-Founder</span>
-      <img src="images/ts-work.png" alt="TheraScript">
+      <a href="http://stylehatch.github.io/bryant/" title="Bryant">
+      <h4>Bryant</h4>
+      <span class='sub'>Open Source Jekyll Project</span>
+      <img src="images/bryant-demo.png" alt="Bryant">
+      </a>
+    </div>
+    <div class="project">
+      <a href="http://jetty.stylehatch.co/" title="Jetty">
+      <h4>Jetty</h4>
+      <span class='sub'>Front End Development</span>
+      <img src="images/jetty-demo.png" alt="Jetty">
       </a>
     </div>
     <div class="project">
@@ -52,17 +59,10 @@ title: Info
       </a>
     </div>
     <div class="project">
-      <a href="http://www.kontorsioninc.com" title="Kontorsion">
-      <h4>Kontorsion</h4>
-      <span class='sub'>Partner, Apparel Designer</span>
-      <img src="images/kon.png" alt="Kontorsion">
-      </a>
-    </div>
-    <div class="project">
-      <a href="http://www.fixedincomeacademy.com" title="Fixed Income Academy">
-      <h4>Fixed Income Academy</h4>
-      <span class='sub'>Director, Design &amp; Development</span>
-      <img src="images/fia.png" alt="Fixed Income Academy">
+      <a href="http://therascript.com" title="TheraScript">
+      <h4>TheraScript</h4>
+      <span class='sub'>Designer Co-Founder</span>
+      <img src="images/ts-work.png" alt="TheraScript">
       </a>
     </div>
   </article>
