More home page styles

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ title: Home
       Writing: <a href="{{ site.posts.first.url }}">{{ site.posts.first.title }}</a>
     </dd> -->
     <dt class="list-section">And wasting</dt>
-    <dd>
+    <dd class="list-button">
       <a class="button" href="https://twitter.com/mukealicious" target="_blank">Twitter</a>
     </dd>
-    <dd>
+    <dd class="list-button">
       <a class="button" href="https://twitter.com/mukealicious" target="_blank">Github</a>
     </dd>
-    <dd>
+    <dd class="list-button">
       <a class="button" href="mailto:mikey@muke.me?subject=Yo Mukey!" target="_blank">Email</a>
     </dd>
   </dl>
