Fix cross browser CSS bugs 🐛

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ title: Home
     </dd>
   </dl>
 </div>
-<div class="bio-visual focused"></div>
+<div class="bio-visual"></div>
 
 <script src="{{ "/assets/javascripts/home.js" | relative_url }}"></script>
