Fix github link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
       <a class="button" href="https://twitter.com/mukealicious" target="_blank">Twitter</a>
     </dd>
     <dd class="list-button">
-      <a class="button" href="https://twitter.com/mukealicious" target="_blank">Github</a>
+      <a class="button" href="https://github.com/mukealicious" target="_blank">Github</a>
     </dd>
     <dd class="list-button">
       <a class="button" href="mailto:mikey@muke.me?subject=Yo Mukey!" target="_blank">Email</a>
