Update working info

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ title: Home
     <dt>Mikey is &mdash;</dt>
     <dt class="list-section">Working</dt>
     <dd>
-      Currently: &nbsp;Engineer @ <a href="https://www.designinc.com/" target="_blank">Design Inc.</a>
+      Currently: &nbsp;Engineer @ <a href="https://www.templarbit.com/" target="_blank">Templarbit</a>
     </dd>
     <dd>
-      Previously: Design &nbsp;&nbsp;@ <a href="https://www.invibe.co/" target="_blank">inVibe</a>
+      Previously: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; @ <a href="https://www.easecentral.com/" target="_blank">EaseCentral</a>
     </dd>
     <dt class="list-section">Making</dt>
     <dd>
